--- a/services/service-product/src/main/resources/application.properties
+++ b/services/service-product/src/main/resources/application.properties
@@ -1,2 +1,20 @@
-spring.application.name=service-product
+# Server Configuration
 server.port=8083
+spring.application.name=service-product
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:product-db}:${MYSQL_PORT:3309}/${MYSQL_DATABASE:products}?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=${MYSQL_USER:product_user}
+spring.datasource.password=${MYSQL_PASSWORD:product_pass}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Logging
+logging.level.com.example.service_customer=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
