--- a/services/service-order/src/main/resources/application.properties
+++ b/services/service-order/src/main/resources/application.properties
@@ -1,12 +1,7 @@
-# Server Configuration
-server.port=8081
-spring.application.name=service-customer
+spring.application.name=service-order
+server.port=8082
 
-# Database Configuration
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:customer-db}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:customers}?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=${MYSQL_USER:customer_user}
-spring.datasource.password=${MYSQL_PASSWORD:customer_pass}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # JPA / Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -18,3 +13,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 logging.level.com.example.service_customer=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# Server Configuration
+
+
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:order-db}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:service_order}?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=${MYSQL_USER:order_user}
+spring.datasource.password=${MYSQL_PASSWORD:order_pass}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
