--- a/services/service-customer/src/main/resources/application.properties
+++ b/services/service-customer/src/main/resources/application.properties
@@ -1,11 +1,33 @@
+# # Server Configuration
+# server.port=8081
+# spring.application.name=service-customer
+
+# # Database Configuration
+# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:customer-db}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:customers}?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+# spring.datasource.username=${MYSQL_USER:customer_user}
+# spring.datasource.password=${MYSQL_PASSWORD:customer_pass}
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# # JPA / Hibernate Configuration
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# # Logging
+# logging.level.com.example.service_customer=DEBUG
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
 # Server Configuration
 server.port=8081
 spring.application.name=service-customer
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:customer-db}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:customers}?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=${MYSQL_USER:customer_user}
-spring.datasource.password=${MYSQL_PASSWORD:customer_pass}
+spring.datasource.url=jdbc:mysql://localhost:3306/service_customer?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=maybetuandat
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Configuration
@@ -18,3 +40,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 logging.level.com.example.service_customer=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
