--- a/services/service-warranty/pom.xml
+++ b/services/service-warranty/pom.xml
@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
           <groupId>com.example</groupId>
-          <artifactId>services</artifactId>
+          <artifactId>mid-project-031343691</artifactId>
           <version>0.0.1-SNAPSHOT</version>
+          <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <groupId>com.example</groupId>
