sửa lại một số cấu hình pom

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
 		<module>services/service-notification</module>
 		<module>services/service-order</module>
 		<module>discovery-server</module>
-		<module>test</module>
 	</modules>
 	<name>mid-project-031343691</name>
 	<description>Demo project for Spring Boot</description>
@@ -38,6 +37,7 @@
 				<artifactId>spring-cloud-dependencies</artifactId>
 				<version>${spring-cloud.version}</version>
 				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
