--- a/services/service-repair/src/main/resources/application.properties
+++ b/services/service-repair/src/main/resources/application.properties
@@ -1,3 +1,31 @@
 spring.application.name=service-repair
-
 server.port=8084
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3307/repair_service
+spring.datasource.username=root
+spring.datasource.password=1111
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+
+# External service URLs
+service.notification.url=${NOTIFICATION_SERVICE_URL:http://service-notification:8085}
+service.warranty.url=${WARRANTY_SERVICE_URL:http://service-warranty:8082}
+service.product.url=${PRODUCT_SERVICE_URL:http://service-product:8083}
+service.customer.url=${CUSTOMER_SERVICE_URL:http://service-customer:8081}
+
+# Eureka Client Configuration
+eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_URL:http://discovery-server:8761/eureka/}
+eureka.instance.preferIpAddress=true
+
+# Logging
+logging.level.com.example.service_repair=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# Actuator
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
