--- a/services/service-customer/pom.xml
+++ b/services/service-customer/pom.xml
@@ -53,10 +53,10 @@
         </dependency>
 
 
-        <dependency>
+        <!-- <dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
+		</dependency> -->
   </dependencies>
 
     <build>
