--- a/services/service-customer/src/main/resources/application.properties
+++ b/services/service-customer/src/main/resources/application.properties
@@ -42,4 +42,4 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
