--- a/services/service-technician/pom.xml
+++ b/services/service-technician/pom.xml
@@ -5,9 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
           <groupId>com.example</groupId>
-          <artifactId>mid-project-031343691</artifactId>
-          <version>0.0.1-SNAPSHOT</version>
-          <relativePath>../../pom.xml</relativePath>
+          <artifactId>services</artifactId>
+          <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.example</groupId>
@@ -51,15 +50,20 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+
+         <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
+
     </dependencies>
+
 
     <build>
         <plugins>
@@ -69,4 +73,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
