--- a/services/service-notification/src/main/resources/application.properties
+++ b/services/service-notification/src/main/resources/application.properties
@@ -1,2 +1,26 @@
 spring.application.name=service-notification
-server.port=8082
+server.port=8085
+
+
+# Database Config
+spring.datasource.url=jdbc:mysql://localhost:3306/service_notification
+spring.datasource.username=maybetuandat
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA Config
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+
+# Email Config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=boxdat123@gmail.com
+spring.mail.password=hjxwhbqyuebsrdtc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# # Eureka Client Config
+# eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_URL:http://discovery-server:8761/eureka/}
+# eureka.instance.preferIpAddress=true
