add warranty service

--- a/services/services-repair/src/main/resources/application.properties
+++ b/services/services-repair/src/main/resources/application.properties
@@ -13,13 +13,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 
 # External service URLs
-service.notification.url=${NOTIFICATION_SERVICE_URL:http://service-notification:8085}
-service.warranty.url=${WARRANTY_SERVICE_URL:http://service-warranty:8082}
-service.product.url=${PRODUCT_SERVICE_URL:http://service-product:8083}
-service.customer.url=${CUSTOMER_SERVICE_URL:http://service-customer:8081}
+service.notification.url=http://service-notification
+service.warranty.url=http://service-warranty
+service.product.url=http://service-product
 
 # Eureka Client Configuration
-eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_URL:http://discovery-server:8761/eureka/}
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.preferIpAddress=true
 
 # Logging
