--- a/services/service-notification/src/main/resources/application.properties
+++ b/services/service-notification/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8085
 
 
 # Database Config
-spring.datasource.url=jdbc:mysql://localhost:3306/service_notification
-spring.datasource.username=maybetuandat
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3307/notification_service
+spring.datasource.username=root
+spring.datasource.password=1111
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Config
@@ -22,5 +22,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # # Eureka Client Config
-# eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_URL:http://discovery-server:8761/eureka/}
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 # eureka.instance.preferIpAddress=true
