--- a/services/service-warranty/src/main/resources/application.properties
+++ b/services/service-warranty/src/main/resources/application.properties
@@ -1,3 +1,28 @@
 spring.application.name=service-warranty
 
-server.port=8085
+server.port=8086
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3307/warranty_service
+spring.datasource.username=root
+spring.datasource.password=1111
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+
+# External service URLs
+service.product.url=http://service-product:8083
+service.repair.url=http://service-repair:8084
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Logging
+logging.level.com.example.service_warranty=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# Actuator
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
