--- a/services/services-repair/pom.xml
+++ b/services/services-repair/pom.xml
@@ -52,10 +52,10 @@
         </dependency>
 
 
-         <!-- <dependency>
+         <dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency> -->
+		</dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
