test giao tiếp warranty và product

--- a/services/service-warranty/src/main/resources/application.properties
+++ b/services/service-warranty/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 
 # External service URLs
-service.product.url=http://service-product:8083
-service.repair.url=http://service-repair:8084
+service.product.url=http://service-product
+service.repair.url=http://service-repair
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
