--- a/services/pom.xml
+++ b/services/pom.xml
@@ -20,6 +20,7 @@
         <module>service-product</module>
         <module>service-technician</module>
         <module>service-warranty</module>
+        <module>service-survey</module>
     </modules>
 
     <properties>
