fix giao tiếp 2 bước nghiệp vụ đầu

--- a/services/service-warranty/src/main/resources/application.properties
+++ b/services/service-warranty/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.jpa.show-sql=true
 # External service URLs
 service.product.url=http://service-product
 service.repair.url=http://service-repair
+service.notification.url=http://service-notification
+service.customer.url=http://service-customer
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
