--- a/services/service-customer/src/main/resources/application.properties
+++ b/services/service-customer/src/main/resources/application.properties
@@ -25,9 +25,9 @@ server.port=8081
 spring.application.name=service-customer
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/service_customer?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=maybetuandat
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3307/service_customer
+spring.datasource.username=root
+spring.datasource.password=1111
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Configuration
