--- a/services/service-notification/src/main/resources/application.properties
+++ b/services/service-notification/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8085
 
 
 # Database Config
-spring.datasource.url=jdbc:mysql://localhost:3307/notification_service
+spring.datasource.url=jdbc:mysql://localhost:3307/service_notification
 spring.datasource.username=root
 spring.datasource.password=1111
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -16,11 +16,13 @@ spring.jpa.show-sql=true
 # Email Config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=boxdat123@gmail.com
-spring.mail.password=hjxwhbqyuebsrdtc
+spring.mail.username=hiep2003ka@gmail.com
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # # Eureka Client Config
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 # eureka.instance.preferIpAddress=true
+
+service.customer.url=http://service-customer
