--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -7,27 +7,41 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
-  	</parent>
-
+	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>mid-project-031343691</artifactId>
+	<artifactId>api-gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<modules>
-		<module>discovery-server</module>
-		<module>services</module>
-		<module>api-gateway</module>
-
-
-	</modules>
-	<name>mid-project-031343691</name>
+	<name>api-gateway</name>
 	<description>Demo project for Spring Boot</description>
-	
+	<url/>
+	<licenses>
+		<license/>
+	</licenses>
+	<developers>
+		<developer/>
+	</developers>
+	<scm>
+		<connection/>
+		<developerConnection/>
+		<tag/>
+		<url/>
+	</scm>
 	<properties>
 		<java.version>21</java.version>
 		<spring-cloud.version>2024.0.1</spring-cloud.version>
 	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-gateway-mvc</artifactId>
+		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -39,33 +53,14 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	
+
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-				<annotationProcessorPaths>
-					<path>
-					<groupId>org.projectlombok</groupId>
-					<artifactId>lombok</artifactId>
-					</path>
-				</annotationProcessorPaths>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-				<excludes>
-					<exclude>
-					<groupId>org.projectlombok</groupId>
-					<artifactId>lombok</artifactId>
-					</exclude>
-				</excludes>
-				</configuration>
 			</plugin>
 		</plugins>
-  	</build>
+	</build>
+
 </project>
