--- a/services/service-warranty/src/main/resources/application.properties
+++ b/services/service-warranty/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=service-warranty
 server.port=8086
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3307/warranty_service
-spring.datasource.username=root
-spring.datasource.password=1111
+spring.datasource.url=jdbc:mysql://localhost:3306/service_warranty
+spring.datasource.username=maybetuandat
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Configuration
@@ -26,3 +26,8 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 # Actuator
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+#kafka properties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
