--- a/services/service-notification/pom.xml
+++ b/services/service-notification/pom.xml
@@ -73,6 +73,8 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
         </dependency>
 
 
