--- a/services/service-product/src/main/resources/application.properties
+++ b/services/service-product/src/main/resources/application.properties
@@ -24,9 +24,9 @@ server.port=8083
 spring.application.name=service-product
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3307/product_service
-spring.datasource.username=root
-spring.datasource.password=1111
+spring.datasource.url=jdbc:mysql://localhost:3306/service_product
+spring.datasource.username=maybetuandat
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Configuration
