--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<modules>
 		<module>discovery-server</module>
 		<module>services</module>
+		<module>gateway-service</module>
 	</modules>
 	<name>mid-project-031343691</name>
 	<description>Demo project for Spring Boot</description>
