--- a/services/service-technician/src/main/resources/application.properties
+++ b/services/service-technician/src/main/resources/application.properties
@@ -20,3 +20,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Eureka Client Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${server.port}}
