--- a/services/service-notification/src/main/resources/application.properties
+++ b/services/service-notification/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.jpa.show-sql=true
 # Email Config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=hiep2003ka@gmail.com
-spring.mail.password=
+spring.mail.username=boxdat123@gmail.com
+spring.mail.password=hjxwhbqyuebsrdtc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
