add security, authen and author

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<module>discovery-server</module>
 		<module>services</module>
 		<module>gateway-service</module>
+		<module>security-service</module>
 	</modules>
 	<name>mid-project-031343691</name>
 	<description>Demo project for Spring Boot</description>
