refactor code warranty service

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -21,6 +21,7 @@
         <module>service-technician</module>
         <module>service-warranty</module>
         <module>service-survey</module>
+        <module>service-condition</module>
     </modules>
 
     <properties>
