add api spec for customer service and config pom, properties for swagger

--- a/services/service-warranty/src/main/resources/application.properties
+++ b/services/service-warranty/src/main/resources/application.properties
@@ -19,7 +19,10 @@ service.repair.url=http://service-repair
 service.notification.url=http://service-notification
 service.customer.url=http://service-customer
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${server.port}}
 
 # Logging
 logging.level.com.example.service_warranty=DEBUG
@@ -28,3 +31,7 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 # Actuator
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.url=/service-customer.yaml
