--- a/services/service-notification/src/main/resources/application.properties
+++ b/services/service-notification/src/main/resources/application.properties
@@ -21,8 +21,14 @@ spring.mail.password=hjxwhbqyuebsrdtc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# # Eureka Client Config
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${server.port}}
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.url=/service-customer.yaml
 # eureka.instance.preferIpAddress=true
 
 service.customer.url=http://service-customer
