--- a/services/service-survey/src/main/resources/application.properties
+++ b/services/service-survey/src/main/resources/application.properties
@@ -14,9 +14,13 @@ spring.jpa.show-sql=true
 
 # Eureka Client Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.preferIpAddress=true
-
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${server.port}}
 # Logging
 logging.level.com.example.service_survey=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.url=/service-customer.yaml
