--- a/services/service-technician/src/main/resources/application.properties
+++ b/services/service-technician/src/main/resources/application.properties
@@ -22,3 +22,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${server.port}}
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.url=/service-customer.yaml
