add .env and deploy with docker compose

--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-spring.application.name=discovery-server
-eureka.instance.hostname=localhost
+spring.application.name=${SPRING_APPLICATION_NAME}
+server.port=${SERVER_PORT}
+
+# Cấu hình Eureka Server
+eureka.instance.hostname=discovery-server
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-server.port=8761
+
+# Cấu hình Logging
+logging.level.com.netflix.eureka=INFO
+logging.level.com.netflix.discovery=INFO
