--- a/services/service-technician/src/main/resources/application.properties
+++ b/services/service-technician/src/main/resources/application.properties
@@ -1,24 +1,53 @@
-spring.application.name=service-technician
-server.port=8086
+# spring.application.name=service-technician
+# server.port=8086
+
+# # Database Configuration
+# spring.datasource.url=jdbc:mysql://localhost:3306/service_technician?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+# spring.datasource.username=root
+# spring.datasource.password=
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# # JPA / Hibernate Configuration
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# # Logging
+# logging.level.com.example.service_technician=DEBUG
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# # Eureka Client Configuration
+# eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# eureka.instance.prefer-ip-address=true
+# eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${server.port}}
+# Server Configuration
+server.port=${SERVER_PORT}
+spring.application.name=${SPRING_APPLICATION_NAME}
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/service_technician?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${server.port}}
 
 # Logging
 logging.level.com.example.service_technician=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# Eureka Client Configuration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=true
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${server.port}}
+# API Documentation
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.url=/service-customer.yaml
