--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,126 +1,249 @@
-#version: "3.8"
-#
-#services:
-#  # Customer Service Application
-#  service-customer:
-#    build:
-#      context: ./services/service-customer
-#      dockerfile: Dockerfile
-#      no_cache: true
-#    container_name: service-customer
-#    ports:
-#      - "8081:8081"
-#    environment:
-#      - MYSQL_HOST=customer-db
-#      - MYSQL_PORT=3306
-#      - MYSQL_DATABASE=service_customer
-#      - MYSQL_USER=customer_user
-#      - MYSQL_PASSWORD=customer_pass
-#    networks:
-#      - customer-network
-#    depends_on:
-#      - customer-db
-#    restart: unless-stopped
-#
-#  # Customer Database
-#  customer-db:
-#    image: mysql:8.0
-#    container_name: customer-db
-#    environment:
-#      - MYSQL_DATABASE=service_customer
-#      - MYSQL_USER=customer_user
-#      - MYSQL_PASSWORD=customer_pass
-#      - MYSQL_ROOT_PASSWORD=root_password
-#    volumes:
-#      - customer-db-data:/var/lib/mysql
-#      - ./services/service-customer/init-scripts:/docker-entrypoint-initdb.d
-#    networks:
-#      - customer-network
-#    restart: unless-stopped
-#
-#  service-product:
-#    build:
-#      context: ./services/service-product
-#      dockerfile: Dockerfile
-#      no_cache: true
-#    container_name: service-product
-#    ports:
-#      - "8083:8083"
-#    environment:
-#      - MYSQL_HOST=product-db
-#      - MYSQL_PORT=3306
-#      - MYSQL_DATABASE=service_product
-#      - MYSQL_USERNAME=product_user
-#      - MYSQL_PASSWORD=product_pass
-#    depends_on:
-#      - product-db
-#    networks:
-#      - product-network
-#    restart: unless-stopped
-#
-#  product-db:
-#    image: mysql:8.0
-#    container_name: product-db
-#    environment:
-#      - MYSQL_DATABASE=service_product
-#      - MYSQL_USER=product_user
-#      - MYSQL_PASSWORD=product_pass
-#      - MYSQL_ROOT_PASSWORD=rootpassword
-#    volumes:
-#      - product-db-data:/var/lib/mysql
-#      - ./services/service-product/init-scripts:/docker-entrypoint-initdb.d
-#    networks:
-#      - product-network
-#    restart: unless-stopped
-#  service-order:
-#    build:
-#      context: ./services/service-order
-#      dockerfile: Dockerfile
-#      no_cache: true
-#    container_name: service-order
-#    ports:
-#      - "8082:8082"
-#    environment:
-#      - MYSQL_HOST=order-db
-#      - MYSQL_PORT=3306
-#      - MYSQL_DATABASE=service_order
-#      - MYSQL_USERNAME=order_user
-#      - MYSQL_PASSWORD=order_pass
-#    depends_on:
-#      - order-db
-#    networks:
-#      - order-network
-#    restart: unless-stopped
-#  order-db:
-#    image: mysql:8.0
-#    container_name: order-db
-#    environment:
-#      - MYSQL_DATABASE=service_order
-#      - MYSQL_USER=order_user
-#      - MYSQL_PASSWORD=order_pass
-#      - MYSQL_ROOT_PASSWORD=rootpassword
-#    volumes:
-#      - order-db-data:/var/lib/mysql
-#      - ./services/service-order/init-scripts:/docker-entrypoint-initdb.d
-#    networks:
-#      - order-network
-#    restart: unless-stopped
-#
-#volumes:
-#  customer-db-data:
-#  product-db-data:
-#  order-db-data:
-#
-#networks:
-#  customer-network:
-#    driver: bridge
-#  product-network:
-#    driver: bridge
-#  order-network:
-#    driver: bridge
-
-
+version: "3.8"
 services:
+  # Discovery Server (Eureka)
+  discovery-server:
+    build:
+      context: ./discovery-server
+      dockerfile: Dockerfile
+      no_cache: true
+    container_name: discovery-server
+    ports:
+      - "${DISCOVERY_SERVER_PORT}:${DISCOVERY_SERVER_PORT}"
+    environment:
+      - SERVER_PORT=${DISCOVERY_SERVER_PORT}
+      - SPRING_APPLICATION_NAME=discovery-server
+    networks:
+      - microservices-network
+
+  # Security Service Database
+  security-db:
+    image: mysql:8.0
+    container_name: security-db
+    environment:
+      - MYSQL_DATABASE=${SECURITY_DB_NAME}
+      - MYSQL_USER=${SECURITY_DB_USER}
+      - MYSQL_PASSWORD=${SECURITY_DB_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${SECURITY_DB_PASSWORD}
+    volumes:
+      - security-db-data:/var/lib/mysql
+      - ./security-service/init-scripts:/docker-entrypoint-initdb.d
+    networks:
+      - microservices-network
+
+  # Security Service
+  security-service:
+    build:
+      context: ./security-service
+      dockerfile: Dockerfile
+      no_cache: true
+    container_name: security-service
+    ports:
+      - "${SECURITY_SERVICE_PORT}:${SECURITY_SERVICE_PORT}"
+    environment:
+      - SERVER_PORT=${SECURITY_SERVICE_PORT}
+      - SPRING_APPLICATION_NAME=service-security
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:${DISCOVERY_SERVER_PORT}/eureka/
+      - MYSQL_HOST=${SECURITY_DB_HOST}
+      - MYSQL_PORT=${SECURITY_DB_PORT}
+      - MYSQL_DATABASE=${SECURITY_DATABASE}
+      - MYSQL_USERNAME=${SECURITY_DB_USER}
+      - MYSQL_PASSWORD=${SECURITY_DB_PASSWORD}
+      - APP_JWT_SECRET=${JWT_SECRET}
+      - APP_JWT_EXPIRATION_MS=${JWT_EXPIRATION_MS}
+    depends_on:
+      - discovery-server
+      - security-db
+    networks:
+      - microservices-network
+
+  # Customer Service Database
+  customer-db:
+    image: mysql:8.0
+    container_name: customer-db
+    environment:
+      - MYSQL_DATABASE=${CUSTOMER_DB_NAME}
+      - MYSQL_USER=${CUSTOMER_DB_USER}
+      - MYSQL_PASSWORD=${CUSTOMER_DB_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${CUSTOMER_DB_PASSWORD}
+    volumes:
+      - customer-db-data:/var/lib/mysql
+      - ./services/service-customer/init-scripts:/docker-entrypoint-initdb.d
+
+    networks:
+      - microservices-network
+  # Customer Service
+  service-customer:
+    build:
+      context: ./services/service-customer
+      dockerfile: Dockerfile
+    container_name: service-customer
+    ports:
+      - "${CUSTOMER_SERVICE_PORT}:${CUSTOMER_SERVICE_PORT}"
+    environment:
+      - SERVER_PORT=${CUSTOMER_SERVICE_PORT}
+      - SPRING_APPLICATION_NAME=service-customer
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:${DISCOVERY_SERVER_PORT}/eureka/
+      - MYSQL_HOST=${CUSTOMER_DB_HOST}
+      - MYSQL_PORT=${CUSTOMER_DB_PORT}
+      - MYSQL_DATABASE=${CUSTOMER_DATABASE}
+      - MYSQL_USERNAME=${CUSTOMER_DB_USER}
+      - MYSQL_PASSWORD=${CUSTOMER_DB_PASSWORD}
+    depends_on:
+      - discovery-server
+      - customer-db
+    networks:
+      - microservices-network
+
+  # Product Service Database
+  product-db:
+    image: mysql:8.0
+    container_name: product-db
+    environment:
+      - MYSQL_DATABASE=${PRODUCT_DB_NAME}
+      - MYSQL_USER=${PRODUCT_DB_USER}
+      - MYSQL_PASSWORD=${PRODUCT_DB_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${PRODUCT_DB_PASSWORD}
+      - MYSQL_HOST=${PRODUCT_DB_HOST}
+    volumes:
+      - product-db-data:/var/lib/mysql
+      - ./services/service-product/init-scripts:/docker-entrypoint-initdb.d
+    networks:
+      - microservices-network
+
+  # Product Service
+  service-product:
+    build:
+      context: ./services/service-product
+      dockerfile: Dockerfile
+    container_name: service-product
+    ports:
+      - "${PRODUCT_SERVICE_PORT}:${PRODUCT_SERVICE_PORT}"
+    environment:
+      - SERVER_PORT=${PRODUCT_SERVICE_PORT}
+      - SPRING_APPLICATION_NAME=service-product
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:${DISCOVERY_SERVER_PORT}/eureka/
+      - MYSQL_HOST=${PRODUCT_DB_HOST}
+      - MYSQL_PORT=${PRODUCT_DB_PORT}
+      - MYSQL_DATABASE=${PRODUCT_DATABASE}
+      - MYSQL_USERNAME=${PRODUCT_DB_USER}
+      - MYSQL_PASSWORD=${PRODUCT_DB_PASSWORD}
+    depends_on:
+      - discovery-server
+      - product-db
+    networks:
+      - microservices-network
+
+  # Notification Service Database
+  notification-db:
+    image: mysql:8.0
+    container_name: notification-db
+    environment:
+      - MYSQL_DATABASE=${NOTIFICATION_DB_NAME}
+      - MYSQL_USER=${NOTIFICATION_DB_USER}
+      - MYSQL_PASSWORD=${NOTIFICATION_DB_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${NOTIFICATION_DB_PASSWORD}
+    volumes:
+      - notification-db-data:/var/lib/mysql
+      - ./services/service-notification/init-script:/docker-entrypoint-initdb.d
+    networks:
+      - microservices-network
+
+  # Notification Service
+  service-notification:
+    build:
+      context: ./services/service-notification
+      dockerfile: Dockerfile
+    container_name: service-notification
+    ports:
+      - "${NOTIFICATION_SERVICE_PORT}:${NOTIFICATION_SERVICE_PORT}"
+    environment:
+      - SERVER_PORT=${NOTIFICATION_SERVICE_PORT}
+      - SPRING_APPLICATION_NAME=service-notification
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:${DISCOVERY_SERVER_PORT}/eureka/
+      - MYSQL_HOST=${NOTIFICATION_DB_HOST}
+      - MYSQL_PORT=${NOTIFICATION_DB_PORT}
+      - MYSQL_DATABASE=${NOTIFICATION_DATABASE}
+      - MYSQL_USERNAME=${NOTIFICATION_DB_USER}
+      - MYSQL_PASSWORD=${NOTIFICATION_DB_PASSWORD}
+      - SPRING_MAIL_HOST=${MAIL_HOST}
+      - SPRING_MAIL_PORT=${MAIL_PORT}
+      - SPRING_MAIL_USERNAME=${MAIL_USERNAME}
+      - SPRING_MAIL_PASSWORD=${MAIL_PASSWORD}
+      - SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH=true
+      - SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE=true
+      - SERVICE_CUSTOMER_URL=http://service-customer:${CUSTOMER_SERVICE_PORT}
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:${KAFKA_PORT}
+      - SPRING_KAFKA_CONSUMER_GROUP_ID=notification-group
+    depends_on:
+      - discovery-server
+      - notification-db
+      - kafka
+      - service-customer
+    networks:
+      - microservices-network
+
+  # Technician Service Database
+  technician-db:
+    image: mysql:8.0
+    container_name: technician-db
+    environment:
+      - MYSQL_DATABASE=${TECHNICIAN_DB_NAME}
+      - MYSQL_USER=${TECHNICIAN_DB_USER}
+      - MYSQL_PASSWORD=${TECHNICIAN_DB_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${TECHNICIAN_DB_PASSWORD}
+    volumes:
+      - technician-db-data:/var/lib/mysql
+      - ./services/service-technician/init-scripts:/docker-entrypoint-initdb.d
+    networks:
+      - microservices-network
+
+  # Technician Service
+  service-technician:
+    build:
+      context: ./services/service-technician
+      dockerfile: Dockerfile
+    container_name: service-technician
+    ports:
+      - "${TECHNICIAN_SERVICE_PORT}:${TECHNICIAN_SERVICE_PORT}"
+    environment:
+      - SERVER_PORT=${TECHNICIAN_SERVICE_PORT}
+      - SPRING_APPLICATION_NAME=service-technician
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:${DISCOVERY_SERVER_PORT}/eureka/
+      - MYSQL_HOST=${TECHNICIAN_DB_HOST}
+      - MYSQL_PORT=${TECHNICIAN_DB_PORT}
+      - MYSQL_DATABASE=${TECHNICIAN_DATABASE}
+      - MYSQL_USERNAME=${TECHNICIAN_DB_USER}
+      - MYSQL_PASSWORD=${TECHNICIAN_DB_PASSWORD}
+    depends_on:
+      - discovery-server
+      - technician-db
+    networks:
+      - microservices-network
+
+  # Gateway Service
+  gateway-service:
+    build:
+      context: ./gateway-service
+      dockerfile: Dockerfile
+      no_cache: true
+    container_name: gateway-service
+    ports:
+      - "${GATEWAY_PORT}:${GATEWAY_PORT}"
+    environment:
+      - SERVER_PORT=${GATEWAY_PORT}
+      - SPRING_APPLICATION_NAME=gateway-service
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://discovery-server:${DISCOVERY_SERVER_PORT}/eureka/
+      - APP_JWT_SECRET=${JWT_SECRET}
+    depends_on:
+      - discovery-server
+      - service-customer
+      - service-product
+      - service-notification
+      - service-technician
+      - security-service
+    networks:
+      - microservices-network
+
   kafka:
     image: apache/kafka-native
     ports:
@@ -142,13 +265,14 @@ services:
 
       # Required for a single node cluster
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-  kafka-ui:
-    image: kafbat/kafka-ui:main
-    ports:
-      - 9999:8080
-    environment:
-      DYNAMIC_CONFIG_ENABLED: "true"
-      KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9093
-    depends_on:
-      - kafka
+
+volumes:
+  security-db-data:
+  customer-db-data:
+  product-db-data:
+  notification-db-data:
+  technician-db-data:
+
+networks:
+  microservices-network:
+    driver: bridge
