--- a/services/service-condition/src/main/resources/application.properties
+++ b/services/service-condition/src/main/resources/application.properties
@@ -1,13 +1,39 @@
-# New Condition Service
-# src/main/resources/application.properties
-spring.application.name=service-condition
+# # New Condition Service
+# # src/main/resources/application.properties
+# spring.application.name=service-condition
 
-server.port=8087
+# server.port=8087
+
+# # Database Configuration
+# spring.datasource.url=jdbc:mysql://localhost:3307/service_condition
+# spring.datasource.username=root
+# spring.datasource.password=1111
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# # JPA / Hibernate Configuration
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# spring.jpa.show-sql=true
+
+# # Eureka Client Configuration
+# eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# # Logging
+# logging.level.com.example.service_condition=DEBUG
+# logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# # Actuator
+# management.endpoints.web.exposure.include=health,info,metrics
+# management.endpoint.health.show-details=always
+
+# Server Configuration
+server.port=${SERVER_PORT}
+spring.application.name=${SPRING_APPLICATION_NAME}
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3307/service_condition
-spring.datasource.username=root
-spring.datasource.password=1111
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Configuration
@@ -16,7 +42,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 
 # Eureka Client Configuration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://discovery-server:8761/eureka/}
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${server.port}}
 
 # Logging
 logging.level.com.example.service_condition=DEBUG
