--- a/services/services-repair/src/main/resources/application.properties
+++ b/services/services-repair/src/main/resources/application.properties
@@ -1,10 +1,47 @@
-spring.application.name=service-repair
-server.port=8084
+# spring.application.name=service-repair
+# server.port=8084
+
+# # Database Configuration
+# spring.datasource.url=jdbc:mysql://localhost:3307/repair_service
+# spring.datasource.username=root
+# spring.datasource.password=1111
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# # Hibernate Configuration
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# spring.jpa.show-sql=true
+
+# # External service URLs
+# service.notification.url=http://service-notification
+# service.warranty.url=http://service-warranty
+# service.product.url=http://service-product
+
+# # Eureka Client Configuration
+# eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# eureka.instance.prefer-ip-address=true
+# eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${server.port}}
+
+# # Logging
+# logging.level.com.example.service_repair=INFO
+# logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# # Actuator
+# management.endpoints.web.exposure.include=health,info,metrics
+# management.endpoint.health.show-details=always
+
+# springdoc.api-docs.enabled=true
+# springdoc.swagger-ui.enabled=true
+# springdoc.swagger-ui.url=/service-customer.yaml
+
+# Server Configuration
+server.port=${SERVER_PORT}
+spring.application.name=${SPRING_APPLICATION_NAME}
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3307/repair_service
-spring.datasource.username=root
-spring.datasource.password=1111
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
@@ -13,12 +50,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 
 # External service URLs
-service.notification.url=http://service-notification
-service.warranty.url=http://service-warranty
-service.product.url=http://service-product
+service.notification.url=${SERVICE_NOTIFICATION_URL}
+service.warranty.url=${SERVICE_WARRANTY_URL}
+service.product.url=${SERVICE_PRODUCT_URL}
 
 # Eureka Client Configuration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${server.port}}
 
@@ -30,6 +67,7 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
 
+# API Documentation
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.url=/service-customer.yaml
